# rotors_exercise

./: .gitignore  CMakeLists.txt  README.md  getPath.h  package.xml
cfg/: Controller.cfg
cfg/cpp/rotors_exercise/: ControllerConfig.h
launch/: display.rviz  mav_exercise1.launch  mav_exercise1.launch~  mav_exercise4.launch
src/: control.cpp  estimator.cpp  estimator.h  getPath.cpp  getPath.h  pid.h
src/rotors_exercise/cfg/: ControllerConfig.py
